# claudecode-skills

./: .gitignore  README.md  SKILLS_INDEX.md
novelgen/: CHANGELOG.md  CHANGELOG_V2.md  CLAUDE_SKILL_INTEGRATION.md  INSTALLATION.md  README.md  README_V2.md  RELEASE_INFO_20251028_105413.md  RELEASE_INFO_20251028_105624.md  RELEASE_INFO_20251028_105802.md  RELEASE_INFO_20251028_111051.md  RELEASE_INFO_20251028_111108.md  RELEASE_INFO_20251028_120419.md  RELEASE_INFO_20251028_150021.md  RELEASE_INFO_20251028_154246.md  USAGE_EXAMPLES.md  USER_GUIDE.md  VERSION.md  api_test_report.json  create_package.sh  demo_memory_analysis.py  install.sh  test_all_functions.py  test_all_interfaces.py  test_package.sh  test_updated_functions.py
novelgen/assets/examples/: sample_project.md
novelgen/assets/templates/: character_template.md  plot_template.md  project_template.md
novelgen/draft/chapters/chapter_01/: chapter_01.json  chapter_01.md
novelgen/draft/chapters/chapter_02/: chapter_02.json  chapter_02.md
novelgen/references/: compression_rules.md  context_strategies.md  data_schemas.md  usage_guide.md
novelgen/scripts/: ai_adapter.py  chapter_generator.py  chapter_generator_temp.py  chapter_manager.py  chapter_memory_analyzer.py  chapter_outline_generator.py  claude_integration.py  compression_engine.py  context_manager.py  demo_interactive_flow.py  import_manager.py  interactive_workflow_manager.py  memory_display_manager.py  mode_handler.py  novel_generator.py  novelgen_cli.py  outline_manager.py  project_initializer.py  session_manager.py  settings_completeness_checker.py  settings_display_manager.py  settings_manager.py  unified_api.py
novelgen/scripts/data_managers/: character_manager.py  environment_manager.py  memory_manager.py  plot_manager.py  style_manager.py  worldbuilder.py
novelgen/settings/characters/: character_relations.md
novelgen/settings/environments/: locations.md
novelgen/settings/plot/: main_plot.md
novelgen/settings/worldview/: world_rules.md  world_setting.md
novelgen/settings/writing_style/: narrative_style.md
novelgen/system/: chapter_index.json  context_config.json  import_log.json  session_backup_1761543076.json  session_backup_1761543082.json  workflow_state.json
sysmem/: .gitignore  CHANGELOG.md  CLAUDE.md  INSTALLATION.md  INSTALL_INFO.md  Makefile  README.md  SYNC_STATUS.md  pyproject.toml  quick_install.bat  quick_install.sh  setup.py
sysmem/assets/: README.md  project_structure_example.json
sysmem/claude-sysmem-chain/skills/sysmem/: project_data.json  project_structure.json
sysmem/examples/: intelligent_update_example.md  readme_before_after.md  readme_update_workflow.md
sysmem/references/: README.md  analysis_criteria.md  claude_md_template.md  readme_template.md
sysmem/scripts/: README.md  analyze_architecture.py  auto_install.py  change_detector.py  collect_data.py  fingerprint.py  incremental_collector.py  install_project.py  interactive_analyzer.py  interactive_problem_solver.py  problem_analyzer.py  scan_project.py  sync_to_source.py  system_monitor.py  unused_code_analyzer.py  update_claude_md.py  utils.py
sysmem/sysmem/: __init__.py  cli.py
