[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sysmem"
dynamic = ["version"]
description = "项目架构链条化管理系统"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Sysmem Team", email = "sysmem@example.com"},
]
maintainers = [
    {name = "Sysmem Team", email = "sysmem@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Documentation",
    "Topic :: System :: Systems Administration",
]
requires-python = ">=3.8"
dependencies = [
    "jsonschema>=3.0",
    "click>=8.0",
    "pathlib2>=2.3;python_version<'3.4'",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "isort>=5.0",
    "flake8>=3.8",
    "mypy>=0.800",
    "pre-commit>=2.0",
]

[project.scripts]
sysmem = "sysmem.cli:main"
sysmem-collect = "sysmem.scripts.collect_data:main"
sysmem-scan = "sysmem.scripts.scan_project:main"
sysmem-analyze = "sysmem.scripts.analyze_architecture:main"
sysmem-update = "sysmem.scripts.update_claude_md:main"
sysmem-monitor = "sysmem.scripts.system_monitor:main"
sysmem-unused = "sysmem.scripts.unused_code_analyzer:main"
sysmem-install = "sysmem.scripts.auto_install:main"

[project.urls]
Homepage = "https://github.com/example/sysmem"
Documentation = "https://sysmem.readthedocs.io/"
Repository = "https://github.com/example/sysmem.git"
"Bug Tracker" = "https://github.com/example/sysmem/issues"

[tool.setuptools_scm]
write_to = "sysmem/_version.py"

[tool.setuptools.packages.find]
where = ["."]
include = ["sysmem*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
sysmem = [
    "references/*.md",
    "assets/*.json",
    "examples/**/*.md",
    "scripts/*.py",
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["sysmem"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]